--- a/assets/style.css
+++ b/assets/style.css
@@ -37,14 +37,23 @@ main {
 .intro-section {
   margin-top: 50px;
   margin: auto;
-  width: 60%;
+  width: 50%;
   padding: 10px;
+}
+
+.intro-section h1 {
+  font-size: 40px;
 }
 
 .intro-section h2 {
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 18px;
+  font-size: 20px;
+  line-height: 1.5em;
+}
+
+.intro-section span {
+  font-size: 30px;
   line-height: 3em;
 }
 
@@ -70,6 +79,38 @@ main {
 }
 
 
+/* LEADERBOARD STYLES */
+.leaderboard-container {
+  margin-top: 50px;
+  margin: auto;
+  width: 30%;
+  padding: 10px;
+  display: none;
+}
+
+.score-list {
+  list-style: none;
+  text-align: left;
+}
+
+.score-list-item {
+  display: flex;
+}
+
+.initials, .score {
+  padding: 15px;
+  margin: 5px;
+  background-color: rgb(90, 165, 90);
+  border-radius: 16px;
+  border-style: double; 
+  border-width: 3px;
+  border-color: darkcyan;
+  color: white;
+  font-size: 20px;
+}
+
+
+
 /* BUTTON STYLES */
 #submit-btn {
   margin: 10px;
@@ -83,7 +124,7 @@ main {
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
-  border-radius: 10%;
+  border-radius: 16px;
   text-shadow: 1px 1px 1px black;
 }
 
@@ -99,12 +140,12 @@ main {
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
-  border-radius: 10%;
+  border-radius: 16px;
   text-shadow: 1px 1px 1px black;
 }
 
 #start-btn {
-  margin: 10px;
+  margin: 20px;
   background-color: #4c8caf;
   border: none;
   color: white;
@@ -115,7 +156,7 @@ main {
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
-  border-radius: 10%;
+  border-radius: 16px;
   text-shadow: 1px 1px 1px black;
 }
 
@@ -131,6 +172,6 @@ main {
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
-  border-radius: 10%;
+  border-radius: 16px;
   text-shadow: 1px 1px 1px black;
 }
